routerrpc: expose preimage on the htlc level
